data/derived/fa15/progs/unify/prog0935.ml.out
Characters 92-124:
  | h::t -> (0, bigAdd(mulByDigit h l1) res)
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c list
